# penne

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.txt  README.md  cloc-report.json  create_hello_from_penne.sh  features.html  penne.todo
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: build.yml  jekyll-gh-pages.yml  pages.yml  release.yml  rust.yml
assets/css/: just-the-docs-dark.css  just-the-docs-light.css
assets/js/: search-data.json
core/text/: char.pn
docs/: Gemfile  _config.yml  errors.md  features.md  index.md  syntax.md
docs/_plugins/: penne_annotated_error_reference.rb  penne_highlighter.rb
docs/_site/: errors.html  features.html  index.html  syntax.html
examples/: array_by_reference.pn  array_of_pointers.pn  assign_to_mutable_array_slice.pn  bitwise_operations.pn  collatz.pn  comparisons.pn  constants.pn  else_if.pn  format_slice_implementation.pn  goto_end.pn  hello_world.pn  import_core.pn  integer_casting.pn  is_even.pn  listen_to_client.pn  loop_in_branch.pn  loop_in_branch_surpressed.pn  multiline_string.pn  pointer_to_pointer.pn  pointers.pn  scoped_variables.pn  strings.pn  structs_and_words.pn  syntax.pn
examples/ffi/: callconv_integer_promotion.pn  ffi_call_trace.c  ffi_call_trace.pn  ffi_cstdlib_printf.pn  ffi_cstdlib_strstr_strncpy.pn  ffi_define_trace.c  ffi_diskr.pn  function_pointer.c
examples/libc/: call_is_alnum.pn  call_malloc.pn  call_malloc_array_of_i64.pn  call_malloc_shorthand.pn  call_memcpy.pn  call_strlen.pn  call_strrchr.pn  call_system.pn
examples/wasm4/: hello_from_penne.pn  wasm4.pn  write_with_custom_font.pn
src/: alpha.rs  analyzer.rs  builtin.rs  common.rs  delta.rs  error.rs  execution_test_tools.rs  expander.rs  generator.rs  included.rs  lexer.rs  lib.rs  linter.rs  main.rs  parser.rs  rebuilder.rs  resolved.rs  resolver.rs  scoper.rs  stdout.rs  typer.rs  value_type.rs
src/alpha/: analyzer.rs  builtin.rs  common.rs  error.rs  expander.rs  generator.rs  lexer.rs  linter.rs  parser.rs  rebuilder.rs  resolved.rs  resolver.rs  scoper.rs  stdout.rs  typer.rs
src/analyzer/: constness.rs  function_calls.rs  label_references.rs  mutability.rs  syntax.rs  variable_references.rs
src/delta/: fuzzer.rs  lexer.rs  parser.rs  scanner.rs  scoper.rs
src/generator/: llvm_sys_generator.rs  textual_ir_generator.rs
support/: Penne.sublime-color-scheme  Penne.sublime-syntax  cloc_penne_definitions.txt
tests/: analysis.rs  execution.rs  formatting.rs  integration.rs  linting.rs  meta.rs  parsing.rs  resolution.rs  scoping.rs  typing.rs
(+430 files in other folders)
