[package]
name = "penne"
version = "0.3.2"
authors = ["Sander in 't Veld <sanderintveld@hotmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Penne is a pasta-oriented programming language that favors the goto-statement for flow control."
repository = "https://github.com/SLiV9/penne"

[dependencies]
enumset = "1.0"
anyhow = "1.0"
ariadne = "0.1.5"
termcolor = "1.1"
include_dir = { version = "0.7", features = ["glob"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3"
llvm-sys = "60"

[dev-dependencies]
pretty_assertions = "1.3"

[[bin]]
name = "penne"
path = "src/main.rs"
