[package]
name = "penne"
version = "0.4.0"
authors = ["Sander in 't Veld <sanderintveld@hotmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Penne is a pasta-oriented programming language that favors the goto-statement for flow control."
repository = "https://github.com/SLiV9/penne"
exclude = ["/docs/_site"]

[dependencies]
enumset = "1.0"
anyhow = "1.0"
ariadne = "0.2"
termcolor = "1.1"
include_dir = { version = "0.7", features = ["glob"] }
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
toml = "0.5"
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
llvm-sys = { version = "60", optional = true }
target-triple = { version = "0.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.3"
assert_cmd = "2.0"
tempfile = "3.4"
comfy-table = "7.0"

[[bin]]
name = "penne"
path = "src/main.rs"

[features]
default = ["textual-ir", "llvm-sys"]
textual-ir = ["dep:target-triple"]
llvm-sys = ["dep:llvm-sys"]
